force-app/main/default/objects/Process_Details_Zuora__c/Process_Details_Zuora__c.object-meta.xml
<CustomObject>
    <label>Approval Process Detail of zQuotes</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Process Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Details of zQuotes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>