force-app/main/default/objects/Process_Details_Zuora__c/fields/Comment_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Comment_Zuora__c</fullName>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>