force-app/main/default/objects/Process_Details_Zuora__c/fields/Current_Approver_Name_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver_Name_Zuora__c</fullName>
    <label>Current Approver Name/ Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>