force-app/main/default/objects/Process_Details_Zuora__c/fields/Date_Submitted_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_Zuora__c</fullName>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>