force-app/main/default/objects/Process_Details_Zuora__c/fields/Quote_Start_Date_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Quote_Start_Date_Zuora__c</fullName>
    <formula>Quote_Zuora__r.zqu__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>