force-app/main/default/objects/Process_Details_Zuora__c/fields/Quote_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Quote_Zuora__c</fullName>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>Approval Process Details of zQuotes</relationshipLabel>
    <relationshipName>Approval_Process_Details_of_zQuotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>