force-app/main/default/objects/Process_Details_Zuora__c/fields/Status_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Status_Zuora__c</fullName>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>